[package]
name = "wsv"
version = "0.2.0"
authors = ["honestlysamuk"]
edition = "2021"
description = "A Rust implementation of the Whitespace-separated values, as defined by Stenway. Follow the release notes on https://honestlysam.uk"
license = "MIT"
homepage = "https://honestlysam.uk/"
documentation = "https://dev.stenway.com/WSV/"
repository = "https://github.com/honestlysamuk/wsv"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
comfy-table = "7"
nom = "7"
pest = "2"
pest_derive = "2"
unicode-bom = "2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
#nom = { version = "7", optional = true }
#pest = { version = "2", optional = true }
#pest_derive = { version = "2", optional = true }

#[features]
#nom = ["dep:nom"]
#pest = ["dep:pest", "dep:pest_derive"]
#example = ["dep:tracing-subscriber", "dep:comfy-table"]
