[package]
name = "wsv"
version = "0.5.0"
authors = ["honestlysamuk"]
edition = "2021"
description = "A collection of implementations of the Whitespace-separated values, as defined by Stenway. Follow the release notes on https://honestlysam.uk"
license = "MIT"
homepage = "https://github.com/honestlysamuk/wsv"
documentation = "https://dev.stenway.com/WSV/"
repository = "https://github.com/honestlysamuk/wsv"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
comfy-table = "7"
tracing = "0"
tracing-subscriber = "0"
itertools = "0"
nom = { version = "7", optional = true }
pest = { version = "2", optional = true }
pest_derive = { version = "2", optional = true }
nom-supreme = { version = "0", optional = true }
divan = "0"

[dev-dependencies]
#criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.14"

[features]
default = ["nom", "pest"]
nom = ["dep:nom", "dep:nom-supreme"]
pest = ["dep:pest", "dep:pest_derive"]

[[bench]]
name = "div"
harness = false
#required-features = ["nom", "pest"]
